--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Michroma&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@900&family=Work+Sans:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway:wght@900&family=Work+Sans:wght@800&display=swap');
 
 .primary {
     color: "#000000";
@@ -30,8 +33,40 @@
     border-top-color: black;
 }
 
-.michroma{ 
-    font-family: 'Michroma';
+.oswald{ 
+    font-family: 'Oswald';
+}
+
+.work-sans{ 
+    font-family: 'Work Sans';
+}
+
+.raleway{
+    font-family: 'Raleway';
+}
+
+.montserrat{
+    font-family: 'Montserrat';
+}
+
+.top-right {
+    top: 393px;
+    left: 1062px;
+  }
+
+.bottom-left{
+    bottom: 340px;
+    right: 1056px;
+}
+
+.left-overflow {
+    left: -40px;
+    top: -40px;
+}
+
+.right-overflow {
+    right: -40px;
+    bottom: -40px;
 }
 
 @keyframes up-spin {
