Reading wise person laura's comments and fixing .primary color and adding space before { in globals.css

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway:wght@900&family=Work+Sans:wght@800&display=swap');
 
 .primary {
-    color: "#000000";
+    color: "#B7E1FC";
 }
 
 .bg-scribble-hover:hover {
@@ -33,19 +33,19 @@
     border-top-color: black;
 }
 
-.oswald{ 
+.oswald { 
     font-family: 'Oswald';
 }
 
-.work-sans{ 
+.work-sans { 
     font-family: 'Work Sans';
 }
 
-.raleway{
+.raleway {
     font-family: 'Raleway';
 }
 
-.montserrat{
+.montserrat {
     font-family: 'Montserrat';
 }
 
