--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@900&family=Work+Sans:wght@800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway:wght@900&family=Work+Sans:wght@800&display=swap');
-
 .primary {
     color: "#B7E1FC";
 }
@@ -37,15 +35,15 @@
 }
 
 .up-spinner.dark {
-    border-color: rgba(0,0,0,0.3);
+    border-color: rgba(0, 0, 0, 0.3);
     border-top-color: black;
 }
 
-.oswald { 
+.oswald {
     font-family: 'Oswald';
 }
 
-.work-sans { 
+.work-sans {
     font-family: 'Work Sans';
 }
 
@@ -58,6 +56,10 @@
 }
 
 @keyframes up-spin {
-    0% { transform: rotate(0deg); }
-    100% {transform: rotate(360deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
