--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@900&family=Work+Sans:wght@800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway:wght@900&family=Work+Sans:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Work+Sans:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway:wght@400;700&family=Work+Sans:wght@800&display=swap');
 .primary {
     color: "#B7E1FC";
 }
@@ -20,6 +20,12 @@
 .bg-scribble-hover:hover {
     background-image: url("/scribble.png");
     background-size: contain;
+}
+
+@responsive {
+    .w-150 {
+        width: 600px;
+    }
 }
 
 .up-spinner {
