--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,17 +5,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Work+Sans:wght@800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway:wght@400;700&family=Work+Sans:wght@800&display=swap');
-.primary {
-    color: "#B7E1FC";
-}
+.primary {color: #B7E1FC;}
 
-.bg-primary {
-    background-color: "#B7E1FC";
-}
+.bg-primary {background-color: #B7E1FC;}
 
-.border-primary {
-    border-color: "#B7E1FC";
-}
+.border-primary {border-color: #B7E1FC;}
 
 .bg-scribble-hover:hover {
     background-image: url("/scribble.png");
@@ -23,9 +17,7 @@
 }
 
 @responsive {
-    .w-150 {
-        width: 600px;
-    }
+    .w-150 {width: 600px;}
 }
 
 .up-spinner {
