--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@
 .bg-primary {background-color: #B7E1FC;}
 
 .border-primary {border-color: #B7E1FC;}
+.border-secondary {border-color: #D4D0FE;}
 
 .bg-scribble-hover:hover {
     background-image: url("/scribble.png");
