--- a/styles/nprogress.css
+++ b/styles/nprogress.css
@@ -4,7 +4,7 @@
 }
 
 #nprogress .bar {
-    background: #000;
+    background: #B7E1FC;
 
     position: fixed;
     z-index: 1031;
@@ -22,7 +22,7 @@
     right: 0px;
     width: 100px;
     height: 100%;
-    box-shadow: 0 0 10px #000, 0 0 5px #000;
+    box-shadow: 0 0 10px #B7E1FC, 0 0 5px #B7E1FC;
     opacity: 1.0;
 
     -webkit-transform: rotate(3deg) translate(0px, -4px);
@@ -45,8 +45,8 @@
     box-sizing: border-box;
 
     border: solid 2px transparent;
-    border-top-color: #000;
-    border-left-color: #000;
+    border-top-color: #B7E1FC;
+    border-left-color: #B7E1FC;
     border-radius: 50%;
 
     -webkit-animation: nprogress-spinner 400ms linear infinite;
