--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Work+Sans:wght@800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway:wght@400;700&family=Work+Sans:wght@800&display=swap');
+
 .primary {color: #B7E1FC;}
 
 .bg-primary {background-color: #B7E1FC;}
@@ -46,7 +47,7 @@
     font-family: 'Work Sans';
 }
 
-.raleway {
+body, .raleway {
     font-family: 'Raleway';
 }
 
