--- a/styles/markdown.css
+++ b/styles/markdown.css
@@ -6,3 +6,11 @@
 .prose a {
     text-decoration: underline
 }
+
+.prose li {
+    list-style-type: disc;
+}
+
+.prose ul {
+    margin-left: 1.25rem;
+}
